hphp/hack/test/typecheck/coeffects/conformance/generic_as_context.php.exp
File "generic_as_context.php", line 6, characters 2-5:
Illegal context: `Te`
Cannot use a context defined outside namespace \HH\Contexts (NastCheck[3090])
